@@ -21,3 +21,46 @@
 #include "libgame_private.h"
 
 
+inline LIGGAME_EXPORT void
+add_vec(vector2d_t *a, vector2d_t *b)
+{
+	a->x += b->x;
+	a->y += b->y;
+}
+
+inline LIGGAME_EXPORT void
+sub_vec(vector2d_t *a, vector2d_t *b)
+{
+	a->x -= b->x;
+	a->y -= b->y;
+}
+
+inline LIGGAME_EXPORT void
+scal_mul_vec(vector2d_t *a, float b)
+{
+	a->x *= b;
+	a->y *= b;
+}
+
+inline LIGGAME_EXPORT void
+scal_div_vec(vector2d_t *a, float b)
+{
+	a->x /= b;
+	a->y /= b;
+}
+
+inline LIGGAME_EXPORT float
+lenght_vec(vector2d_t *a)
+{
+	return (sqrt((a->x) * (a->x) + (a->y) * (a->y)));
+}
+
+inline LIGGAME_EXPORT void
+norm_vec(vector2d_t *a)
+{
+	float l = lenght_vec(a);
+	if (l > 1) {
+		a->x /= l;
+		a->y /= 1;
+	}
+}
