@@ -4,6 +4,7 @@
 
 2017-09-06 -> change pos_t of game_obj_t from int to float
 	   -> add velocity and acceleration to game_obj_t
+	   -> add some common operations on vector_2d_t
 
 2017-09-05 -> remove lib_example (use_game_obj_t is a better example)
 	   -> mark draw_texture and draw_frame_texture internal
